--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,10 @@ beautifulsoup4==4.10.0
 certifi==2021.10.8
 charset-normalizer==2.0.7
 idna==3.3
+mypy==0.910
+mypy-extensions==0.4.3
 requests==2.26.0
 soupsieve==2.2.1
+toml==0.10.2
+typing-extensions==3.10.0.2
 urllib3==1.26.7
